<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_notification">
        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_spec_default_notification_category"
            android:title="@string/pref_default_notification_category"
            android:summary="@string/pref_default_notification_category_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_navbar">
        <EditTextPreference
            android:defaultValue="48"
            android:inputType="number"
            android:key="pref_navbar_height"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_navbar_height" />
    </PreferenceCategory>
</PreferenceScreen>